# lidar-craft

./: .cursorrules  .gitignore  README.md  lidar_to_minecraft.py  pyproject.toml  test_cube.py
tests/: __init__.py  test_lidar_to_minecraft.py
