[project]
name = "lidar-craft"
version = "0.1.0"
description = "Generate Minecraft Worlds from LiDAR Sources"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "diskcache>=5.6.0",
    "laspy>=2.5.0",
    "lazrs>=0.4.0",
    "nbtlib>=2.0.0",
    "numpy>=1.24.0",
    "rasterio>=1.3.0",
    "scipy>=1.10.0",
]

[project.scripts]
lidar-to-minecraft = "lidar_to_minecraft:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
    "output",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["lidar_to_minecraft"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-m \"not slow\""
